--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html> <!--AJAX activated for www.pivkaa.ru 60ef366169abb1239da9f834-->
+<!DOCTYPE html> <!--AJAX activated for www.pivkaa.ru 60ef366169abb1239da9f834-->
 <html data-wf-domain="www.pivkaa.ru" data-wf-page="60ef366169abb1a6a8a9f82d" data-wf-site="60ef311e5744429849dcab68" lang="ru">
    <head>
       <meta charset="utf-8">
@@ -71,7 +71,7 @@
          <div class="section-baymard different">
             <div class="w-layout-grid grid">
                <p id="w-node-_8b2de688-0ab5-d46d-261d-33c1b2b2e5fa-a8a9f82d" class="h2-subheading cd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ipsum reiciendis. Quisquam dolor voluptatibus et laboriosam ipsa maxime magnam! <br>I specialise in creating minimalist, clean and high-converting user experiences for web and mobile. <br>I am very passionate about improving web design and continuously learning new things to ensure I offer you the best.<br></p>
-               <a href="#" class="link-block-7 w-inline-block"><img src="/images/dota-images-1.png" alt="dota images pivkaa" class="image-3"></a>
+               <a href="#" class="link-block-7 w-inline-block"><img src="images/dota-images-1.png" alt="dota images pivkaa" class="image-3"></a>
             </div>
          </div>
       </div>
