--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <body class="body">
       <div data-w-id="5c11e99c-8e47-c06e-9176-662119b2cf60" class="preloader">
          <div class="preloader-text">
-            <div data-w-id="5c11e99c-8e47-c06e-9176-662119b2cf62" class="preloader-text-wonder">Добро пожаловать!</div>
+            <div data-w-id="5c11e99c-8e47-c06e-9176-662119b2cf62" class="preloader-text-wonder">Привет!</div>
          </div>
       </div>
       <header id="hero" data-w-id="c98dda62-300b-7e19-c3a9-cc0fedbe1f92" class="hero-section">
