--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
          <div class="section-baymard different">
             <div class="w-layout-grid grid">
                <p id="w-node-_8b2de688-0ab5-d46d-261d-33c1b2b2e5fa-a8a9f82d" class="h2-subheading cd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, ipsum reiciendis. Quisquam dolor voluptatibus et laboriosam ipsa maxime magnam! <br>I specialise in creating minimalist, clean and high-converting user experiences for web and mobile. <br>I am very passionate about improving web design and continuously learning new things to ensure I offer you the best.<br></p>
-               <a href="#" class="link-block-7 w-inline-block"><img src="https://cdn.dribbble.com/users/674925/screenshots/5081342/media/5d153ce77a62a6bf49179a43ebc9a229.png" alt="dota images pivkaa" class="image-3"></a>
+               <a href="#" class="link-block-7 w-inline-block"><img src="images/dota-images-1.png" alt="dota images pivkaa" class="image-3"></a>
             </div>
          </div>
       </div>
