--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <header id="hero" data-w-id="c98dda62-300b-7e19-c3a9-cc0fedbe1f92" class="hero-section">
          <div id="navi" class="navigation div-block-24">
             <div class="nav-wrap">
-               <div class="div-block"><img src="images/black-logo.svg" loading="lazy" alt="" class="image-19"></div>
+               <div class="div-block"><img src="images/logo.svg" loading="lazy" alt="" class="image-19"></div>
                <div class="logo-wrap">
                   <a href="index.html" aria-current="page" class="logo-text w--current"></a>
                   <a data-w-id="0ba79dd7-b110-9c3b-353b-40ebd331465b" href="#" class="hamburger-wrap w-inline-block">
