--- a/porn.html
+++ b/porn.html
@@ -19,7 +19,6 @@
        <center ><a href="mother.html">мама</a><br>
        <a href="father.html">папа</a><br>
        <a href="sister.html">сестра</a><br></center>
-       <iframe src="https://vk.com/video_ext.php?oid=-61953407&id=456239021&hash=3706a762fe0bbdbb" width="640" height="360" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
-       <iframe width="560" height="315" src="https://youtu.be/L-QGQQoPf-Y" allowfullscreen></iframe>
+      <iframe src="https://www.xvideos.com/embedframe/29372169" frameborder=0 width=510 height=400 scrolling=no allowfullscreen=allowfullscreen></iframe>
 </body>
 </html>
